--- a/uts/index.html
+++ b/uts/index.html
@@ -59,21 +59,21 @@
                 <h2><u>OUR</u> GALLERY</h2>
                 <table class="galeri" cellspacing="10" cellpadding="6" >
                     <tr>
-                        <td rowspan="2"> <img src="kursi1.png" alt="" height="340px"></td>
-                        <td> <img src="kopi1.png" alt="" height="160px" width="200px"></td>
-                        <td rowspan="2"> <img src="k2.jpg" alt="" height="340px" width="260px"></td>
-                        <td> <img src="tp2.jpg" alt="" height="160px"width="270px"></td>
-                        <td><img src="k1.jpg" alt="" height="160px" width="210px"></td>
+                        <td rowspan="2"> <img src="./kursi1.png" alt="" height="340px"></td>
+                        <td> <img src="./kopi1.png" alt="" height="160px" width="200px"></td>
+                        <td rowspan="2"> <img src="./k2.jpg" alt="" height="340px" width="260px"></td>
+                        <td> <img src="./tp2.jpg" alt="" height="160px"width="270px"></td>
+                        <td><img src="./k1.jpg" alt="" height="160px" width="210px"></td>
                     </tr>
                     <tr>
                        
-                        <td ><img src="tp1.jpg" alt="" height="160px" width="200px"></td>
-                        <td><img src="k7.jpg" alt="" height="160px" width="270px"></td>
-                        <td rowspan="2"><img src="c1.jpg" alt="" width="210px"height="380px"></td>
+                        <td ><img src="./tp1.jpg" alt="" height="160px" width="200px"></td>
+                        <td><img src="./k7.jpg" alt="" height="160px" width="270px"></td>
+                        <td rowspan="2"><img src="./c1.jpg" alt="" width="210px"height="380px"></td>
                         
                     </tr>
                     <tr>
-                        <td><img src="c2.jpg" alt="" height="200px" width="245px"></td>
+                        <td><img src="./c2.jpg" alt="" height="200px" width="245px"></td>
                         <td rowspan="2"><img src="tp6.jpg" alt="" height="400px" width="200px"></td>
                         <td> <img src="tp3.jpg" alt="" width="260px"></td>
                         <td rowspan="2"><img src="tp4.jpg" alt="" height="400px" width="270px"></td>
