--- a/uts/index.html
+++ b/uts/index.html
@@ -32,8 +32,8 @@
         <h3> Start Your Day with Coffee</h3> 
         <br><br><br>
         <div class="button">
-        <a href="./menu/index.html" class="button1">Our Menu</a> 
-        <a href="./reservation/index.html " class="button2">Reservation</a>    
+        <a href="./../menu/index.html" class="button1">Our Menu</a> 
+        <a href="./../reservation/index.html " class="button2">Reservation</a>    
         </div>
     </div>
     </a>
@@ -100,42 +100,42 @@
                     <tr>
                         <td>
                             <p>Coffe Latte</p>
-                            <img src="./menu/coffelatte.png" alt="">
+                            <img src="./../menu/coffelatte.png" alt="">
                             <div class="btn">
                             <a href="/indexorder.html" >Order</a> 
                             </div>
                         </td>
                         <td>
                             <p>Irish</p>
-                            <img src="./menu/irishcoffe.png" alt="">
+                            <img src="./../menu/irishcoffe.png" alt="">
                             <div class="btn">
                             <a href="indexorder.html" >Order</a> 
                             </div>
                         </td>
                         <td>
                             <p>Cappucino</p>
-                            <img src="./menu/cappucino.png" alt="">
+                            <img src="./../menu/cappucino.png" alt="">
                             <div class="btn">
                             <a href="indexorder.html" >Order</a> 
                             </div>
                         </td>
                         <td>
                             <p>Breve</p>
-                            <img src="./menu/breve.png" alt="">
+                            <img src="./../menu/breve.png" alt="">
                             <div class="btn">
                             <a href="indexorder.html" >Order</a> 
                             </div>
                         </td>
                         <td>
                             <p>Vanila Latte</p>
-                            <img src="./menu/vanila.png" alt="">
+                            <img src="./../menu/vanila.png" alt="">
                             <div class="btn">
                             <a href="indexorder.html" >Order</a> 
                             </div>
                         </td>
                         <td>
                             <p>Cofeducate</p>
-                            <img src="./menu/cofeducate.png" alt="">
+                            <img src="./../menu/cofeducate.png" alt="">
                             <div class="btn">
                             <a href="indexorder.html" >Order</a> 
                             </div>
@@ -147,42 +147,42 @@
                     <tr>
                         <td>
                             <p>Snowy Moca</p>
-                            <img src="./menu/snowymocha.png" alt="">
+                            <img src="./../menu/snowymocha.png" alt="">
                             <div class="btn">
                             <a href="indexorder.html" >Order</a> 
                             </div>
                         </td>
                         <td>
                             <p>Mexi Mocha</p>
-                            <img src="/menu/meximocha.png" alt="">
+                            <img src="./../menu/meximocha.png" alt="">
                             <div class="btn">
                             <a href="indexorder.html" >Order</a> 
                             </div>
                         </td>
                         <td>
                             <p>Coklat</p>
-                            <img src="./menu/coklat.png" alt="" width="100px">
+                            <img src="./../menu/coklat.png" alt="" width="100px">
                             <div class="btn">
                             <a href="indexorder.html" >Order</a> 
                             </div>
                         </td>
                         <td>
                             <p>Coklat Mac</p>
-                            <img src="./menu/coklatmac.png" alt="">
+                            <img src="./../menu/coklatmac.png" alt="">
                             <div class="btn">
                             <a href="indexorder.html" >Order</a> 
                             </div>
                         </td>
                         <td>
                             <p>Caramel Mocha</p>
-                            <img src="./menu/caramelfrappe.png" alt="">
+                            <img src="./../menu/caramelfrappe.png" alt="">
                             <div class="btn">
                             <a href="indexorder.html" >Order</a> 
                             </div>
                         </td>
                         <td>
                             <p>Salted Caramel</p>
-                            <img src="/menu/saltedcaramel.png" alt="">
+                            <img src="./../menu/saltedcaramel.png" alt="">
                             <div class="btn">
                             <a href="indexorder.html" >Order</a> 
                             </div>
@@ -194,42 +194,42 @@
                     <tr>
                         <td>
                             <p>Basil and Chesee</p>
-                            <img src="./menu/basilchese.png" alt="">
+                            <img src="./../menu/basilchese.png" alt="">
                             <div class="btn">
                             <a href="indexorder.html" >Order</a> 
                             </div>
                         </td>
                         <td>
                             <p>Spice & Mustard</p>
-                            <img src="./menu/spicemustard.png" alt="">
+                            <img src="./../menu/spicemustard.png" alt="">
                             <div class="btn">
                             <a href="indexorder.html" >Order</a> 
                             </div>
                         </td>
                         <td>
                             <p>Spicy & Hot</p>
-                            <img src="./menu/spicy.png" alt="">
+                            <img src="./../menu/spicy.png" alt="">
                             <div class="btn">
                             <a href="indexorder.html" >Order</a> 
                             </div>
                         </td>
                         <td>
                             <p>Mocha Oreo</p>
-                            <img src="./menu/mochaoreo.png" alt="">
+                            <img src="./../menu/mochaoreo.png" alt="">
                             <div class="btn">
                             <a href="indexorder.html" >Order</a> 
                             </div>
                         </td>
                         <td>
                             <p>Coffee Fluffy</p>
-                            <img src="./menu/coffe.png" alt="">
+                            <img src="./../menu/coffe.png" alt="">
                             <div class="btn">
                             <a href="indexorder.html" >Order</a> 
                             </div>
                         </td>
                         <td>
                             <p>Strawberry Jam</p>
-                            <img src="./menu/strawberi.png" alt="">
+                            <img src="./../menu/strawberi.png" alt="">
                             <div class="btn">
                             <a href="indexorder.html" >Order</a> 
                             </div>
@@ -241,42 +241,42 @@
                     <tr>
                         <td>
                             <p>Croissant Lotus</p>
-                            <img src="./menu/clotus.png" alt="" width="100px">
+                            <img src="./../menu/clotus.png" alt="" width="100px">
                             <div class="btn">
                             <a href="indexorder.html" >Order</a> 
                             </div>
                         </td>
                         <td>
                             <p>Croissant Keju</p>
-                            <img src="./menu/ckeju.png" alt="" width="100px">
+                            <img src="./../menu/ckeju.png" alt="" width="100px">
                             <div class="btn">
                             <a href="indexorder.html" >Order</a> 
                             </div>
                         </td>
                         <td>
                             <p>Croissant Cinamon</p>
-                            <img src="./menu/ccinamon.png" alt="" width="100px">
+                            <img src="./../menu/ccinamon.png" alt="" width="100px">
                             <div class="btn">
                             <a href="indexorder.html" >Order</a> 
                             </div>
                         </td>
                         <td>
                             <p>Croissant Coklat</p>
-                            <img src="./menu/ccoklat.png" alt="">
+                            <img src="./../menu/ccoklat.png" alt="">
                             <div class="btn">
                             <a href="indexorder.html" >Order</a> 
                             </div>
                         </td>
                         <td>
                             <p>Croissant Banana</p>
-                            <img src="./menu/cbanana.png" alt="">
+                            <img src="./../menu/cbanana.png" alt="">
                             <div class="btn">
                             <a href="indexorder.html" >Order</a> 
                             </div>
                         </td>
                         <td>
                             <p>Croissant Mocha</p>
-                            <img src="./menu/cmocha.png" alt="">
+                            <img src="./../menu/cmocha.png" alt="">
                             <div class="btn">
                             <a href="indexorder.html" >Order</a> 
                             </div>
