--- a/uts/index.html
+++ b/uts/index.html
@@ -102,7 +102,7 @@
                             <p>Coffe Latte</p>
                             <img src="./../menu/coffelatte.png" alt="">
                             <div class="btn">
-                            <a href="/indexorder.html" >Order</a> 
+                            <a href="indexorder.html" >Order</a> 
                             </div>
                         </td>
                         <td>
